--- a/style.css
+++ b/style.css
@@ -1,5 +1,42 @@
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+h1 {
+    text-align: center;
+    }
+
+nav {
+        text-align: center;
+    }
+p{
+    line-height: 1.5;
 }
+nav a 
+    {
+        padding: 10px;
+        background-color: grey;
+        text-decoration: navy;
+        color: white;
+        margin: 5px;
+    }
+figure figcaption 
+    {
+        text-align: center;
+        font-size: smaller; 
+    }
+#featured-property 
+    {       
+        text-align: center;
+    }
+
+#featured-property p 
+    {
+        width: 800px;
+        margin: auto;
+    }
+#details div 
+    {
+        float: left;
+        width: 25%;
+        height: 5%; 
+        text-align: center;
+        background-color: #db0909; 
+        margin: 0px;
+    } 
